//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.credentials.keys;

import "signed.proto";
import "google/protobuf/any.proto";

//
// The type/use of a public key.
//
enum KeyType {
  UNKNOWN = 0;
  IDENTITY = 1;
  DEVICE = 2;
  PARTY = 3;
  FEED = 4;
}

message Key {
  /**
   * - The `KeyType` type of the key. This is often unknown for keys from other sources.
   */
  required KeyType type = 1;

  /**
   * - The public key as a Buffer (required).
   */
  required bytes publicKey = 2;

  /**
   * - The secret key as a Buffer (this will never be visible outside the Keyring).
   */
  bytes secretKey = 3;

  /**
   * - Is this key from a Greeting "hint"?
   */
  bool hint = 4;

  /**
   * - Is this our key? Usually true if `secretKey` is present,
   *          may be false for "inception keys" such as the Party key.
   */
  bool own = 5;

  /**
   * - Is this key to be trusted?
   */
  bool trusted = 6;

  /**
   * - An RFC-3339 date/time string for when the key was added to the Keyring.
   */
  string added = 7;

  /**
   * - An RFC-3339 date/time string for when the key was created.
   */
  string created = 8;
}
